--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 <nav>
     <ul>
-        <li><a href=".\personal_details.html">Personal Details</a></li>
-        <li><a href=".\academics.html">Academics</a></li>
-        <li><a href=".\internships.html">Internships</a></li>
-        <li><a href=".\projects.html">Projects</a></li>
-        <li><a href=".\skills.html">Skills</a></li>
-        <li><a href=".\Certifications.html">Certifications</a></li>
-        <li><a href=".\hobbies.html">Hobbies</a></li>
-        <li><a href=".\interests.html">Interests</a></li>
+        <li><a href="personal_details.html">Personal Details</a></li>
+        <li><a href="academics.html">Academics</a></li>
+        <li><a href="internships.html">Internships</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="Certifications.html">Certifications</a></li>
+        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="interests.html">Interests</a></li>
     </ul>
 </nav>
 <div class="container">
@@ -57,3 +57,4 @@
 </div>
 </body>
 </html>
+
