--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <li><a href="internships.html">Internships</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="skills.html">Skills</a></li>
-        <li><a href="Certifications.html">Certifications</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
+        <li><a href="Certifications.html">Certifications</a></li
         <li><a href="interests.html">Interests</a></li>
     </ul>
 </nav>
@@ -57,4 +56,5 @@
 </div>
 </body>
 </html>
+
 
